# glyphbench

./: .dockerignore  .env.cluster.template  .gitignore  CONTRIBUTING.md  Dockerfile  HANDOVER.md  LICENSE  README.md  pricing.yaml  pyproject.toml
cluster_manager/: clusters.py  cm.py  config.py  download_models.py  jobs.py  manifest.py  model_cache.py
cluster_manager/manifests/: manifest_20260421_020022.json  manifest_20260421_020252.json  manifest_20260421_020328.json
community_runs/: README.md
configs/: endpoints.toml
configs/examples/: dummy_smoke.yaml  foundation_smoke.yaml  quickstart.yaml  random_baseline.yaml
configs/rl/glyphbench-smoke/: rl.toml
configs/rl/qwen35-4b-glyphbench/: README.md  rl.toml  smoke-multinode.toml  smoke-singlenode.toml  smoke.toml
docs/: ARCHITECTURE.md  ENVIRONMENTS.md  INTEGRATION.md  OBSERVATION_FORMAT.md  REPLAY.md  llm-agent-failure-modes.md
docs/leaderboard/: data.json  gallery.html  index.html
docs/superpowers/plans/: 2026-04-24-verifiers-migration.md  2026-04-30-readme-public-release.md
docs/superpowers/specs/: 2026-04-24-verifiers-migration-design.md  2026-04-27-glyphbench-memory-scaffold-design.md  2026-04-30-readme-public-release-design.md
eval/: README.md  plot_results.ipynb  random_baseline.json  random_baseline.json.200-cap.bak  random_baseline.py  random_baseline_miniatari.json  run_archival.sh  run_debug.sh  run_eval.py  run_full.sh  scoring.py
eval/configs/: qwen35_4b.yaml
examples/: custom_agent_loop.py  quickstart.py  random_agent.py
scripts/: README.md  audit_reward_bounds.py  build_leaderboard.py  build_sif.sh  demo_all_envs.py  generate_env_catalog.py  init_reward_audit.py  play_curses.py  play_interactive.py  play_random.py  record_random_gifs.py  replay_trajectory.py  run_benchmark.py  serve_vllm.sh  terminal_colors.py  upload_assets.py
scripts/rl/: README.md  health_check.sh  install_cuda_toolkit.sh  launch_all.sh  launch_inference.sh  launch_orchestrator.sh  launch_smoke.sh  launch_smoke_multinode.sh  launch_smoke_singlenode.sh  launch_trainer.sh  sitecustomize.py
src/atlas_rl/: __init__.py
src/atlas_rl/core/: README.md  __init__.py  ascii_primitives.py  base_env.py  observation.py  registry.py
src/atlas_rl/envs/: __init__.py
src/atlas_rl/harness/: README.md  __init__.py  agent.py  mock_client.py  parser.py  prompt_builder.py  state.py  templating.py
src/atlas_rl/plotting/: README.md  __init__.py  common.py  normalize.py  style.py
src/atlas_rl/providers/: README.md  anthropic_client.py  base.py  factory.py  gemini_client.py  openai_client.py  retries.py  vllm_client.py
src/atlas_rl/runner/: README.md  budget.py  config.py  dashboard.py  random_agent.py  runner.py  storage.py
src/glyphbench/: __init__.py  cli.py
src/glyphbench/core/: README.md  __init__.py  action.py  base_env.py  glyph_primitives.py  metrics.py  observation.py  registry.py  task_selection.py
src/glyphbench/envs/: __init__.py
src/glyphbench/harness/: README.md  __init__.py  agent.py  mock_client.py  parser.py  prompt_builder.py  templating.py
src/glyphbench/plotting/: README.md  __init__.py  common.py  normalize.py
src/glyphbench/providers/: README.md  anthropic_client.py  base.py  factory.py  gemini_client.py  openai_client.py  retries.py  vllm_client.py
src/glyphbench/rl/: README.md  __init__.py  advantage.py  log_reader.py  loss.py  orchestrator_patch.py  split_rl_toml.py  welford.py
src/glyphbench/runner/: README.md  config.py  dashboard.py  random_agent.py  runner.py  storage.py
src/glyphbench/verifiers_integration/: __init__.py  env.py  memory.py  parser.py  prompting.py  rubric.py
src/rl_world_ascii/: __init__.py
src/rl_world_ascii/core/: README.md  __init__.py  action.py  ascii_primitives.py  base_env.py  observation.py  registry.py
src/rl_world_ascii/harness/: README.md  __init__.py  agent.py  mock_client.py  parser.py  prompt_builder.py  schema.py  templating.py
src/rl_world_ascii/providers/: README.md  __init__.py  anthropic_client.py  base.py  factory.py  gemini_client.py  openai_client.py  pricing.py  retries.py  (+1 more)
tests/: _reward_helpers.py  _reward_xfail.py  conftest.py  test_classics_rewards.py  test_cli.py  test_end_to_end.py  test_eval_history.py  test_hud_policy.py  test_load_environment_filter.py  test_miniatari_alien.py  test_miniatari_amidar.py  test_miniatari_assault.py  test_miniatari_asterix.py  test_miniatari_asteroids.py  test_miniatari_atlantis.py  test_miniatari_bankheist.py  test_miniatari_base.py  test_miniatari_battlezone.py  test_miniatari_beamrider.py  test_miniatari_berzerk.py  test_miniatari_bowling.py  test_miniatari_boxing.py  test_miniatari_breakout.py  test_miniatari_centipede.py  test_miniatari_choppercommand.py  test_miniatari_defender.py  test_miniatari_demonattack.py  test_miniatari_doubledunk.py  test_miniatari_enduro.py  test_miniatari_fishingderby.py  test_miniatari_freeway.py  test_miniatari_frostbite.py  test_miniatari_gopher.py  test_miniatari_icehockey.py  test_miniatari_kangaroo.py  test_miniatari_kungfumaster.py  test_miniatari_mspacman.py  test_miniatari_phoenix.py  test_miniatari_pong.py  test_miniatari_qbert.py  (+20 more)
tests/core/: test_action.py  test_ascii_primitives.py  test_base_env.py  test_base_env_forfeit.py  test_glyph_primitives.py  test_metrics.py  test_observation.py  test_registry.py
tests/harness/: test_agent.py  test_mock_client.py  test_parser.py  test_prompt_builder.py  test_schema.py  test_state.py  test_templating.py
tests/plotting/: test_common.py  test_normalize.py  test_style.py
tests/providers/: test_anthropic_client.py  test_base.py  test_factory.py  test_gemini_client.py  test_openai_client.py  test_pricing.py  test_retries.py  test_vllm_client.py
tests/rl/: test_advantage.py  test_log_reader.py  test_loss.py  test_welford.py
tests/runner/: test_budget.py  test_config.py  test_dashboard.py  test_random_agent.py  test_runner_smoke.py  test_storage.py
tests/verifiers_integration/: test_end_to_end.py  test_env.py  test_legend_dedup.py  test_memory.py  test_parser.py  test_prompting.py  test_rubric.py
(+486 files in other folders)
