[project]
name = "rl_world_ascii"
version = "0.0.1"
description = "Unified ASCII reimplementation of RL benchmarks for LLM evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.0",
    "numpy>=2.0",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.9",
    "httpx>=0.27",
    "openai>=1.50",
    "anthropic>=0.40",
    "google-genai>=0.3",
    "pyarrow>=17.0",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.112",
    "ruff>=0.7",
    "mypy>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rl_world_ascii"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length enforced by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
