[project]
name = "glyphbench"
version = "0.1.0"
description = "GlyphBench: A unified benchmark of 210 text-rendered RL environments for evaluating LLM agents on sequential decision-making"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Roger Creus Castanyer" },
]
keywords = ["reinforcement-learning", "llm", "benchmark", "ascii", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "verifiers @ git+https://github.com/PrimeIntellect-ai/verifiers.git@980a9ea",
    "datasets>=3.0",
    "openai>=1.50",
    "numpy>=2.0",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.9",
]

[project.scripts]
glyphbench = "glyphbench.cli:main"
gb = "glyphbench.cli:main"

[project.urls]
Homepage = "https://github.com/roger-creus/glyphbench"
Repository = "https://github.com/roger-creus/glyphbench"
Issues = "https://github.com/roger-creus/glyphbench/issues"

[project.optional-dependencies]
# LLM provider clients (pick what you need)
providers = [
    "httpx>=0.27",
    "openai>=1.50",
    "anthropic>=0.40",
    "google-genai>=0.3",
]
# Eval infrastructure (vLLM offline inference)
eval = [
    "vllm>=0.8",
    "torch>=2.4",
]
# RL training (prime-rl pinned at a specific commit; bump deliberately).
rl = [
    "prime-rl @ git+https://github.com/PrimeIntellect-ai/prime-rl.git@af17a555fe8a697e665ec2235935a07f182607a0",
]
# Analysis and plotting
analysis = [
    "pyarrow>=17.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "jupyter>=1.0",
]
# Development
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.112",
    "ruff>=0.7",
    "mypy>=1.12",
]
# Everything
all = [
    "glyphbench[providers,analysis,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glyphbench"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
managed = true
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
override-dependencies = [
    "transformers>=5.1.0.dev0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "yaml",
    "pandas",
    "pyarrow",
    "pyarrow.parquet",
    "google",
    "google.genai",
    "google.genai.*",
    "vllm",
    "vllm.*",
    "verifiers",
    "verifiers.*",
    "datasets",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "huggingface-hub>=1.11.0",
]
